# mpk

./: CMakeLists.txt  Matrixes_mult_tests  fourier.c  fourier_tests  inverse.c  matrixes_mult.c  mpk1.c  mpk2.c  mpk_lvl2.c  naive.c  naivtest.c  schonhage_strassen.c  tests  time_comparisong.c
Polynom/: CMakeLists.txt  fourier.c  fourier.h  polynom.c  polynom.h
gen_lib/: CMakeLists.txt
gen_lib/linear_algebra_elements/: CMakeLists.txt  complex.c  complex.h  matrix.c  matrix.h  matrix_def.h  matrix_general_type.c  matrix_general_type.h  rational.c  rational.h  vector_algebraic_addendum.c  vector_algebraic_addendum.h
gen_lib/standart_classes/: CMakeLists.txt  string.c  string.h
gen_lib/types_and_functions_declarations/: CMakeLists.txt  arithmetic_type_declaration.c  arithmetic_type_declaration.h  functions_extensions.c  functions_extensions.h  general_type.h  io_type_declaration.h  type_declaration.c  type_declaration.h
gen_lib/user_interacts/: CMakeLists.txt  user_interactions.c  user_interactions.h
gen_lib/vector/: CMakeLists.txt  algorithms.c  algorithms.h  vector.h  vector_def.h  vector_general_type.c  vectordef.c  vectordef.h  vectorfuncs.c  vectorfuncs.h
